# clickmeter

./: .env.example  .gitignore  README.md  pyproject.toml
config/: benchmark.properties
jmeter/: clickhouse-benchmark.jmx
jmeter_bench/: __init__.py  analyze.py  cli.py  config.py  monitor.py  plot.py  query_log.py  runner.py  server.py
queries/: README.md  queries.csv.example
schema/: schema.sql.example
scripts/: analyze-results.sh  load-schema.sh  run.sh  tune-os.sh
