[project]
name = "jmeter-bench"
version = "0.1.0"
description = "Python-friendly harness to run the ClickHouse JMeter benchmark, monitor load-generator vs server, analyze results, and plot a bottleneck verdict."
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "matplotlib>=3.8",
    "psutil>=5.9",
    "clickhouse-connect>=0.7",
]

[project.scripts]
bench = "jmeter_bench.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jmeter_bench"]
